# flutter-native-interop-playground

./: .gitignore  LICENSE  analysis_options.yaml  pubspec.yaml  readme.md
android/: build.gradle  consumer-rules.pro  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/java/org/maplibre/android/: BuildConfig.java  LibraryLoader.java  MapLibre.java
android/src/main/kotlin/com/kekland/flmln/: FlMlnFlutterTexture.java  FlMlnPlugin.kt  FlMlnPluginGlobals.java  FlutterTextureRegistryProxy.java  NativeBridge.kt
example/: .metadata  pubspec.yaml
example/android/app/src/main/: AndroidManifest.xml
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner/: Info.plist
example/macos/Runner.xcodeproj/: project.pbxproj
ios/: flmln.podspec
ios/flmln/: Package.swift
ios/flmln/Sources/flmln/: FlMlnMetalFlutterTexture.swift  FlMlnPluginIOS.swift  FlMlnlDarwinPluginGlobals.swift  FlutterTextureRegistryProxy.swift
lib/: flmln.dart
lib/src/style/: extensions.dart  layer.dart  property.dart  style.dart  types.dart
lib/src/utils/: ffi_utils.dart
lib/src/widgets/: flmln_renderer.dart  flmln_widget.dart  flutter_map_flmln.dart  style_inspector.dart
macos/: flmln.podspec
macos/flmln/: Package.swift
macos/flmln/Sources/flmln/: FlMlnPluginMacOS.swift
src/: CMakeLists.txt
src/src/: flmln.cpp  flmln.h  flmln_ffi_gen.cpp  flmln_ffi_gen.h  flmln_ffi_manual.hpp  flmln_style_gen.cpp  flmln_style_gen.h  test.cpp
src/src/flmln/: flutter_texture_interface.hpp  map_observer.hpp  platform.hpp  renderer_backend.hpp  renderer_frontend.hpp
src/src/flmln/gl/: renderer_backend_egl.cpp  renderer_backend_egl.hpp
src/src/flmln/mtl/: renderer_backend.cpp  renderer_backend.hpp
src/src/flmln/platform/android/: flutter_texture.hpp  flutter_texture_interface.cpp  flutter_texture_interface.hpp  platform.cpp  renderer_backend.cpp  renderer_backend.hpp  window_renderable_resource.cpp  window_renderable_resource.hpp
src/src/flmln/platform/darwin/: ffi.cpp  ffi.hpp  flutter_texture_interface.cpp  flutter_texture_interface.hpp  platform.cpp
src/src/flmln/vulkan/: renderer_backend.cpp  renderer_backend.hpp
src/src/wrappers/: animation_options.cpp  animation_options.h  bound_options.cpp  bound_options.h  camera_options.cpp  camera_options.h  default_style.cpp  default_style.h  enum_helpers.hpp  enums.h  flmln.cpp  flmln.h  map.cpp  map.h  map_options.cpp  map_options.h  resource_options.cpp  resource_options.h  tile_server_options.cpp  tile_server_options.h  types.h
tool/: build_libraries.py  clean_build.py  ffigen.dart  generate_cpp_ffi.py  generate_style.dart
tool/cpp_ffi/: c.py  converter.py  cpp.py  generator.py  globals.py  parser.py  utils.py
tool/style/: _.dart  configuration.dart  parser.dart  utils.dart
tool/style/generators/: c_generator.dart  dart_generator.dart  utils.dart
tool/style/reference/: v8.json
